LC-2044 User registration journey